# nsfw-web-server

./: .dockerignore  .gitignore  404.html  Dockerfile  README.md  index.html  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml  static.yml
assets/: 404.html-B-unM-xO.js  app-DrggRTA7.js  index.html-Bu4fg36_.js
docs/: 404.html  index.html
docs/assets/: 404.html-CFib0SpQ.js  404.html-gXgSDXMg.js  app-Bz0wMhSL.js  app-ClZpTfbT.js  index.html-CgSjhY__.js  index.html-ED9uW7xN.js
model/: model.py
nsfw/: __init__.py  nsfw.py
nsfw_ui/: package-lock.json  package.json
nsfw_ui/docs/: index.md
nsfw_ui/docs/.vuepress/: config.js
utils/: resp.py  utils.py
