[tool.poetry]
name = "nsfw-web-server"
version = "0.1.0"
description = ""
authors = ["Allyx <allyx@allyx.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opennsfw2 = "^0.13.9"
tensorflow = "^2.17.0"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
